@@ -1,3 +1,7 @@
+Sat Aug 17 11:59:58 2002  Nick Burrett  <nick@dsvr.net>
+
+	* netdb.h (h_errno): Declare.
+	
 Sat Aug 17 11:58:29 2002  Alex Waugh  <alex@alexwaugh.com>
 
 	* unix/fstat.c (fstat): Return true extent, rather than file
